re-align media player, and fix padding in side boxes

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,14 +19,22 @@
   border: 10px solid rgb(70, 170, 193);
   background-color: rgb(180, 187, 187);
   font-family: fantasy;
-  width: fit-content;
+  width: 420px;
+  height: 387px;
   display: block;
   float: left;
-  margin-top: 100px;  
+  margin-top: 100px; 
+  padding-right: 20px;
 }
 
 .aboutme  ul {
   font-size: 20px;
+  list-style-position: inside;
+  
+}
+
+.aboutme ul li  {
+  text-align:left;
 }
 
 .aboutme h3 {
@@ -45,6 +53,7 @@
   display: block;
   float: right;
   margin-top: 100px;  
+  padding: 10px;
 }
 
 .projects {
@@ -64,19 +73,19 @@
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.player {
-  border: 10px solid rgb(70, 170, 193);
-  width: fit-content;
-  
+.leftmug  {
+  float: left;
 }
 
-.leftmug  {
-float: left;
+.player {
+  float: left;
+  padding-left: 800px;
+
 }
 
 .rightmug {
  float: left;
- padding-left: 1850px;
+ padding-left: 750px;
 }
 
 .row  {
